refactor: - rename class

--- a/src/components/website/mapApp/DeviceList.scss
+++ b/src/components/website/mapApp/DeviceList.scss
@@ -54,7 +54,7 @@
       height: 118px;
     }
 
-    .devices-list-item {
+    .device-list-item {
       padding-left: 16px;
 
       display: flex;
