--- a/src/components/website/mapApp/DeviceList.scss
+++ b/src/components/website/mapApp/DeviceList.scss
@@ -34,14 +34,18 @@
     .device-list-item-shadow-left {
       top: -39px;
       left: 10px;
-
-      background-color: #709F0B;
     }
 
     .device-list-item-shadow-right {
       top: -39px;
       left: 193px;
+    }
 
+    .device-list-item-shadow-left-first {
+      background-color: #709F0B;
+    }
+
+    .device-list-item-shadow-right-first {
       background-color: #26FFF2;
     }
 
