refactor: ! add additional colors to show different colors in future

--- a/src/components/website/mapApp/DeviceList.scss
+++ b/src/components/website/mapApp/DeviceList.scss
@@ -49,6 +49,22 @@
       background-color: #26FFF2;
     }
 
+    .device-list-item-shadow-left-second {
+      background-color: #709F0B;
+    }
+
+    .device-list-item-shadow-right-second {
+      background-color: #26FFF2;
+    }
+
+    .device-list-item-shadow-left-third {
+      background-color: #709F0B;
+    }
+
+    .device-list-item-shadow-right-third {
+      background-color: #26FFF2;
+    }
+
     .device-list-item-image {
       position: absolute;
       top: 8px;
