feat: ! alter device list item colors

--- a/src/components/website/mapApp/DeviceList.scss
+++ b/src/components/website/mapApp/DeviceList.scss
@@ -50,19 +50,19 @@
     }
 
     .device-list-item-shadow-left-second {
-      background-color: #709F0B;
+      background-color: #0B469F;
     }
 
     .device-list-item-shadow-right-second {
-      background-color: #26FFF2;
+      background-color: #2663FF;
     }
 
     .device-list-item-shadow-left-third {
-      background-color: #709F0B;
+      background-color: #FF7246;
     }
 
     .device-list-item-shadow-right-third {
-      background-color: #26FFF2;
+      background-color: #FF2626;
     }
 
     .device-list-item-image {
