refactor: - format text without <br />

--- a/src/components/website/mainPage/Hero.scss
+++ b/src/components/website/mainPage/Hero.scss
@@ -58,6 +58,7 @@
         }
 
         .hero-text {
+            width: 450px;
             font-size: 20px;
             font-weight: 500;
             line-height: 24px;
