refactor: ! extract device-list-item-opaque-text class

--- a/src/components/website/mapApp/DeviceList.scss
+++ b/src/components/website/mapApp/DeviceList.scss
@@ -84,6 +84,9 @@
 
       button {
         text-decoration: underline;
+      }
+
+      .device-list-item-opaque-text {
         opacity: 0.6;
       }
     }
