--- a/src/components/website/mapApp/MarkerAddress.scss
+++ b/src/components/website/mapApp/MarkerAddress.scss
@@ -1,4 +1,4 @@
-.marker-address-container {
+.location-address-container {
   margin-bottom: 16px;
 
   display: flex;
@@ -6,14 +6,14 @@
   justify-content: flex-start;
   gap: 8px;
 
-  .marker-address-image {
+  .location-address-image {
     width: 36px;
     height: 36px;
 
     margin: 6.5px 0;
   }
 
-  .marker-address {
+  .location-address {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
