refactor: ! add loader to be shown when waiting for user points

--- a/src/components/website/mapApp/MapAppHeader.scss
+++ b/src/components/website/mapApp/MapAppHeader.scss
@@ -114,4 +114,13 @@
     .user-points:first-of-type {
         color: #FFFFFF;
     }
+
+    .user-points-loader-container {
+        height: 100%;
+        width: 100%;
+        min-width: 24px;
+
+        display: flex;
+        align-items: center;
+    }
 }
